# english-learn

./: .env.example  .gitignore  README.md  pyproject.toml
app/: cli.py  main.py
app/api/: routes.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  entities.py
app/schemas/: __init__.py  requests.py  responses.py
app/services/: audio_utils.py  feedback.py  practice.py  scoring.py  strict_transcript.py  stt.py  subtitle_parser.py  vocab.py  youtube_import.py
app/static/css/: app.css
app/templates/: index.html  practice.html
eng_learn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: README.md  conftest.py
tests/api/: test_attempt_feedback_api.py  test_sentences_api.py
tests/fixtures/: rolling_caption_sample.vtt
tests/unit/: test_feedback.py  test_scoring.py  test_subtitle_parser.py
